2.11.1
------


2.11.0
------
(RB=587999)
Make the resource information available to non-root request builder specs.

(RB=587136)
Disallow @ActionParam on non-action methods.

2.10.19
-------
(RB=587506)
Fix a bug in ZKPersistentConnection where a ZKConnection shouldn't be reused 
after session expiration.

2.10.18
-------
(RB=521359)
Fix for expensive ComplexResourceKey creation.

(RB=578223)
Add additional methods to filter resource model to expose additional schema information.

(RB=558570)
Fix createResponse error handling.

(RB=575906)
Add a load balancer strategy config to control whether only updating partition state at the end of each internal.

2.10.17
-------
(RB=561481)
Added fix for ActionResult<Void> return types throwing NPE

(RB=554335)
Fix for null optional parameter values in ActionsRequest throwing NPE

(RB=563406)
Allow custom method builder suffix in RequestBuilderSpecGenerator.

2.10.16
-------
(RB=551668)
Data generator generates unambiguous @see link.

(RB=556232)
Enable application to do additional processing on IndividualRequest and IndividualResponse by using
MultiplexerSingletonFilter.

2.10.15
-------
(RB=550595)
Move request builder spec code from restli-swift repo to pegasus repo so that Android Rest.li client
can use it too. Currently this has not been used by Pegasus RestRequestBuilderGenerator yet.

(RB=443539)
Allow Resources to designate alternative keys with the @AlternativeKey and @AlternativeKeys annotation.
Only client side work has been done.  Resources can be called with alternative keys but builders have
not been modified to allow alternative key formats to be sent.

2.10.14
-------
(RB=554203)
Corrected CHANGELOG to correctly reflect changes made in 2.10.13.

2.10.13
-------
(RB=537449)
Change Rest.li validator API to expose validateInput() and validateOutput() instead of a single validate() method.

(RB=546217)