@@ -1,6 +1,7 @@
 2.11.1
 ------
-
+(RB=591323)
+Add original typeref data schema to template spec.
 
 2.11.0
 ------
